feat: Alterar provider padrão de IA para Gemini
- Alterado AI_PROVIDER padrão de 'openai' para 'gemini' em todas as funções
- Gemini oferece tier gratuito (15 RPM, 1M tokens/dia)
- Ideal para desenvolvimento e testes
- Atualizado .env.example com novo padrão

Ficheiros modificados:
- ai-chat/index.ts
- generate-practice/index.ts
- review-writing/index.ts
- translate-definition/index.ts
- .env.example

Nota: Para usar OpenAI ou Lovable, basta configurar AI_PROVIDER no Supabase.

--- a/supabase/functions/.env.example
+++ b/supabase/functions/.env.example
@@ -1,6 +1,6 @@
 # AI Provider Configuration
 # Escolha um dos providers: openai, gemini, lovable
-AI_PROVIDER=openai
+AI_PROVIDER=gemini
 
 # OpenAI Configuration (Recomendado para produção)
 # Obter em: https://platform.openai.com/api-keys
