Use global origin, add OAuth logs & error handling
Switch OAuth redirect target to globalThis.location?.origin and replace direct window.location.origin usage to avoid direct window references. Export and use signInWithGoogle/signInWithGithub in the auth page, add console.debug logs for OAuth flows, and add explicit error handling that surfaces a user-facing toast when the OAuth client secret is missing (messages in Portuguese). Remove unused lovable imports. Update .env Supabase project ID/URL/publishable key, and replace a hardcoded Gemini API key in supabase/functions/.env.example with a placeholder and explanatory comments.

--- a/supabase/functions/.env.example
+++ b/supabase/functions/.env.example
@@ -8,7 +8,12 @@ OPENAI_API_KEY=sk-proj-xxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 
 # Google Gemini Configuration (Gratuito até 15 RPM)
 # Obter em: https://aistudio.google.com/app/apikey
-GEMINI_API_KEY=AIzaSyAr4XggLi7wOyGR5xCLFm3B6p7GlB6bHSU
+# IMPORTANTE: aqui vai uma API key do Gemini (normalmente começa com "AIza").
+# NÃO coloque aqui "Client Secret" do OAuth (normalmente começa com "GOCSPX").
+GEMINI_API_KEY=your_gemini_api_key_here
+
+# Opcional: modelo do Gemini (recomendado)
+# GEMINI_MODEL=gemini-flash-latest
 
 # Lovable Gateway Configuration (Original)
 # Obter em: https://lovable.dev
